meca.css
* {
	padding: 0px;
	margin: 0px;
}

body {
	background-color: #303030;
}

#SiteBackground {
	height: 366px;
	background-image: url("img/background.png");
	background-repeat: repeat-x;
}

#Header {
	height: 105px;
	background-image: url("img/NavigationBackground.png");
	background-repeat: repeat-x;
	position: relative;
}

#Holder {
	min-width: 850px;
	position: absolute;
	top: 4px;
	left: 0px;
	width: 100%;
}

#Page {
	width: 803px;
	margin-left: auto;
	margin-right: auto;
}

#Logo {
	bottom: 0px;
	position: absolute;
}

#TopNavigation {
	position: absolute;
	left: 143px;
	width: 660px;
	bottom: 5px;
}

.NavigationTab {
	float: left;
	width: 105px;
	margin-left: 5px;
	background-image: url("img/NavigationTab.png");
	height: 38px;
	top: 5px;
	position: relative;
}

.NavigationTabActive {
	height: 43px;
	background-image: url("img/NavigationTabActive.png");
	top: 0px;
}

